# Controller-Optimizer

./: .gitignore  CHANGELOG.md  PROJECT.md  README.md  main.lua  metadata.xml
.github/workflows/: native-input-fix.yml
docs/: 兼容性审计.md  背景信息.md
native-input-fix/: .gitattributes  .gitignore  CMakeLists.txt  LICENSE  PROJECT.md  README.md  THIRD_PARTY_NOTICES.md  bootstp.def  cofix.def  winmm.def
native-input-fix/config/: diagnostic.ini  generic-test.ini  tainted-test.ini
native-input-fix/docs/: deployment-steam-deck.md  deployment-windows.md  reverse-engineering.md
native-input-fix/src/: aim_filter.cpp  aim_filter.hpp  bootstrap.cpp  hook.cpp  injection.cpp  injection.hpp  injector.cpp  launcher.cpp  patcher.cpp  proxy.cpp  win_common.hpp
native-input-fix/tests/: aim_filter_test.cpp  bootstrap_fixture.cpp  bootstrap_patcher_test.cpp  proxy_smoke_test.cpp
native-input-fix/tools/: deck-collect.sh  deck-inject.sh  deck-install.sh  deck-uninstall.sh
release-notes/: 1.6.0.txt  1.7.0.txt
tests/: test_controller_optimizer.lua
tools/: README.md  upload_workshop.sh
